top 10 atrtist by no. of songs

--- a/cmd/mvis/bar.html
+++ b/cmd/mvis/bar.html
@@ -8,13 +8,13 @@
 </head>
 
 <body><div class="container">
-    <div class="item" id="OoWdmyFEmENK" style="width:900px;height:500px;"></div>
+    <div class="item" id="TenjDKpZgOCW" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_OoWdmyFEmENK = echarts.init(document.getElementById('OoWdmyFEmENK'), "white", { renderer: "canvas" });
-    let option_OoWdmyFEmENK = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{},"series":[{"name":"Category A","type":"bar","data":[{"value":187853},{"value":2265465},{"value":362720},{"value":139383},{"value":144000},{"value":1546703},{"value":211960},{"value":167619},{"value":162466},{"value":120015},{"value":257265},{"value":133937},{"value":139586},{"value":134500},{"value":888045},{"value":740868},{"value":648932},{"value":245293},{"value":236586},{"value":82041}]}],"title":{"text":"basic bar example","subtext":"This is the subtitle."},"toolbox":{},"tooltip":{},"xAxis":[{"data":["Taron Egerton","Travis Scott","Simphiwe Dana","Kronan","Usimamane","Nalu","6LACK","Nate Rose","Pharrell Williams","Flyana Boss","OneRepublic","cassö","BLK ODYSSY","Kveld","Lemon & Herb","Gabbana","DJ Snake","Christina Aguilera","Tom Doolie","Lento"]}],"yAxis":[{}]}
+    let goecharts_TenjDKpZgOCW = echarts.init(document.getElementById('TenjDKpZgOCW'), "white", { renderer: "canvas" });
+    let option_TenjDKpZgOCW = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{},"series":[{"name":"Category A","type":"bar","data":[{"value":27},{"value":27},{"value":21},{"value":16},{"value":14},{"value":37},{"value":27},{"value":25},{"value":22},{"value":15}]}],"title":{"text":"basic bar example","subtext":"This is the subtitle."},"toolbox":{},"tooltip":{},"xAxis":[{"data":["The Weeknd","lordkez","Nasty C","Don Toliver","Phlocalyst","Masego","Young Thug","Kendrick Lamar","Kid Cudi","Lurah"]}],"yAxis":[{}]}
 
-    goecharts_OoWdmyFEmENK.setOption(option_OoWdmyFEmENK);
+    goecharts_TenjDKpZgOCW.setOption(option_TenjDKpZgOCW);
 </script>
 <style>
     .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
