--- a/cmd/mvis/bar.html
+++ b/cmd/mvis/bar.html
@@ -8,13 +8,13 @@
 </head>
 
 <body><div class="container">
-    <div class="item" id="TenjDKpZgOCW" style="width:900px;height:500px;"></div>
+    <div class="item" id="JpBCUbHtvAAL" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_TenjDKpZgOCW = echarts.init(document.getElementById('TenjDKpZgOCW'), "white", { renderer: "canvas" });
-    let option_TenjDKpZgOCW = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{},"series":[{"name":"Category A","type":"bar","data":[{"value":27},{"value":27},{"value":21},{"value":16},{"value":14},{"value":37},{"value":27},{"value":25},{"value":22},{"value":15}]}],"title":{"text":"basic bar example","subtext":"This is the subtitle."},"toolbox":{},"tooltip":{},"xAxis":[{"data":["The Weeknd","lordkez","Nasty C","Don Toliver","Phlocalyst","Masego","Young Thug","Kendrick Lamar","Kid Cudi","Lurah"]}],"yAxis":[{}]}
+    let goecharts_JpBCUbHtvAAL = echarts.init(document.getElementById('JpBCUbHtvAAL'), "white", { renderer: "canvas" });
+    let option_JpBCUbHtvAAL = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{},"series":[{"name":"Category A","type":"bar","data":[{"value":25},{"value":23},{"value":23},{"value":19},{"value":16},{"value":14},{"value":37},{"value":26},{"value":16},{"value":15}]}],"title":{"text":"basic bar example","subtext":"This is the subtitle."},"toolbox":{},"tooltip":{},"xAxis":[{"data":["Kendrick Lamar","Kid Cudi","lordkez","Young Thug","Don Toliver","Phlocalyst","Masego","The Weeknd","Nasty C","Lurah"]}],"yAxis":[{}]}
 
-    goecharts_TenjDKpZgOCW.setOption(option_TenjDKpZgOCW);
+    goecharts_JpBCUbHtvAAL.setOption(option_JpBCUbHtvAAL);
 </script>
 <style>
     .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
