--- a/cmd/mvis/pie.html
+++ b/cmd/mvis/pie.html
@@ -8,13 +8,13 @@
 </head>
 
 <body><div class="container">
-    <div class="item" id="yuJvNMLYpiUj" style="width:900px;height:500px;"></div>
+    <div class="item" id="oSUXIPIMNDGX" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_yuJvNMLYpiUj = echarts.init(document.getElementById('yuJvNMLYpiUj'), "white", { renderer: "canvas" });
-    let option_yuJvNMLYpiUj = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{},"series":[{"name":"pie","type":"pie","data":[{"name":"Masego","value":42},{"name":"Kendrick Lamar","value":40},{"name":"Lurah","value":39},{"name":"Russ","value":23},{"name":"G-Eazy","value":46},{"name":"Young Thug","value":32},{"name":"Tom Misch","value":25},{"name":"Mereba","value":20},{"name":"Alan Walker","value":20},{"name":"Nasty C","value":36},{"name":"The Soil","value":33},{"name":"lordkez","value":30},{"name":"Kid Cudi","value":30},{"name":"Imagine Dragons","value":24},{"name":"The Weeknd","value":68},{"name":"Don Toliver","value":59},{"name":"Kota the Friend","value":30},{"name":"Travis Scott","value":27},{"name":"Future","value":27},{"name":"Metro Boomin","value":24}],"label":{"show":true,"formatter":"{b}: {c}"}}],"title":{"text":"basic pie example"},"toolbox":{},"tooltip":{}}
+    let goecharts_oSUXIPIMNDGX = echarts.init(document.getElementById('oSUXIPIMNDGX'), "white", { renderer: "canvas" });
+    let option_oSUXIPIMNDGX = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{},"series":[{"name":"pie","type":"pie","data":[{"name":"Nasty C","value":36},{"name":"Lurah","value":39},{"name":"Masego","value":42},{"name":"Kendrick Lamar","value":40},{"name":"Kota the Friend","value":30},{"name":"Travis Scott","value":27},{"name":"Don Toliver","value":59},{"name":"G-Eazy","value":46},{"name":"The Soil","value":33},{"name":"Young Thug","value":32},{"name":"lordkez","value":30},{"name":"Kid Cudi","value":30},{"name":"Future","value":27},{"name":"Tom Misch","value":25},{"name":"The Weeknd","value":68}],"label":{"show":true,"formatter":"{b}: {c}"}}],"title":{"text":"basic pie example"},"toolbox":{},"tooltip":{}}
 
-    goecharts_yuJvNMLYpiUj.setOption(option_yuJvNMLYpiUj);
+    goecharts_oSUXIPIMNDGX.setOption(option_oSUXIPIMNDGX);
 </script>
 <style>
     .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
