--- a/cmd/mvis/wordcloud.html
+++ b/cmd/mvis/wordcloud.html
@@ -10,13 +10,13 @@
 </head>
 
 <body><div class="container">
-    <div class="item" id="NnTHiAHvHRFx" style="width:900px;height:500px;"></div>
+    <div class="item" id="QQWMAkRAVZPI" style="width:900px;height:500px;"></div>
 </div><script type="text/javascript">
     "use strict";
-    let goecharts_NnTHiAHvHRFx = echarts.init(document.getElementById('NnTHiAHvHRFx'), "white", { renderer: "canvas" });
-    let option_NnTHiAHvHRFx = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{},"series":[{"name":"wordcloud","type":"wordCloud","sizeRange":[14,80],"data":[{"name":"Masego","value":42},{"name":"Kendrick Lamar","value":40},{"name":"Lurah","value":39},{"name":"Russ","value":23},{"name":"G-Eazy","value":46},{"name":"Young Thug","value":32},{"name":"Tom Misch","value":25},{"name":"Mereba","value":20},{"name":"Alan Walker","value":20},{"name":"Nasty C","value":36},{"name":"The Soil","value":33},{"name":"lordkez","value":30},{"name":"Kid Cudi","value":30},{"name":"Imagine Dragons","value":24},{"name":"The Weeknd","value":68},{"name":"Don Toliver","value":59},{"name":"Kota the Friend","value":30},{"name":"Travis Scott","value":27},{"name":"Future","value":27},{"name":"Metro Boomin","value":24}],"textStyle":{"normal":{"color":function () {return 'rgb(' + [Math.round(Math.random() * 160),Math.round(Math.random() * 160),Math.round(Math.random() * 160)].join(',') + ')';}}}}],"title":{"text":"basic WordCloud example"},"toolbox":{},"tooltip":{}}
+    let goecharts_QQWMAkRAVZPI = echarts.init(document.getElementById('QQWMAkRAVZPI'), "white", { renderer: "canvas" });
+    let option_QQWMAkRAVZPI = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{},"series":[{"name":"wordcloud","type":"wordCloud","shape":"star","sizeRange":[14,80],"data":[{"name":"The Soil","value":33},{"name":"Young Thug","value":32},{"name":"lordkez","value":30},{"name":"Kid Cudi","value":30},{"name":"Future","value":27},{"name":"Tom Misch","value":25},{"name":"The Weeknd","value":68},{"name":"G-Eazy","value":46},{"name":"Nasty C","value":36},{"name":"Lurah","value":39},{"name":"Kendrick Lamar","value":40},{"name":"Kota the Friend","value":30},{"name":"Travis Scott","value":27},{"name":"Don Toliver","value":59},{"name":"Masego","value":42}],"textStyle":{"normal":{"color":function () {return 'rgb(' + [Math.round(Math.random() * 160),Math.round(Math.random() * 160),Math.round(Math.random() * 160)].join(',') + ')';}}}}],"title":{"text":"basic WordCloud example"},"toolbox":{},"tooltip":{}}
 
-    goecharts_NnTHiAHvHRFx.setOption(option_NnTHiAHvHRFx);
+    goecharts_QQWMAkRAVZPI.setOption(option_QQWMAkRAVZPI);
 </script>
 <style>
     .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
